...
                                                        <connections>
                                                            <action selector="cancelClicked:" destination="du9-yE-YVF" eventType="touchUpInside" id="hx9-SO-LLV"/>
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ceT-c0-HWL" customClass="MNBarItemButton">
                                                        <rect key="frame" x="279.5" y="0.0" width="79.5" height="30"/>
                                                        <state key="normal" title="Details"/>
                                                        <connections>
                                                            <segue destination="Thd-Mv-qU2" kind="presentation" identifier="MNShowDetailsSegue" id="6EA-t8-rKV"/>
                                                        </connections>
                                                    </button>
                                                </subviews>
                                            </stackView>
...
                                <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="64" id="YeH-dr-zlF"/>
                                </constraints>
                                <items>
                                    <navigationItem title="Title" prompt="" id="1b5-1z-N1C">
                                        <barButtonItem key="rightBarButtonItem" title="More cities" id="hFJ-eC-mdt">
                                            <connections>
                                                <segue destination="tAm-gz-rwf" kind="presentation" id="4yx-TD-MB0"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
                                </items>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="CBW-n0-kkC" id="efK-dw-1t0"/>
                            <outlet property="delegate" destination="CBW-n0-kkC" id="LaY-GK-iGw"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Choose Metro" id="5CP-sp-YhV">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="gOJ-ha-5og">
                            <connections>
                                <segue destination="T5t-hz-baX" kind="unwind" identifier="" unwindAction="applyNoneChanges:" id="0k1-td-5it"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Done" id="11h-pm-X4B">
                            <connections>
                                <segue destination="T5t-hz-baX" kind="unwind" identifier="MNMetroChangedUnwindToMetroViewController" unwindAction="updateMetroWithUnwindSegue:" id="TKd-uv-vOe"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="tug-9j-AIr" id="4Yu-rl-N33"/>
                            <outlet property="delegate" destination="tug-9j-AIr" id="8aV-Jk-dAN"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Route Details" id="sHL-1m-pJv">
                        <barButtonItem key="rightBarButtonItem" title="Done" id="3od-Wh-VjG">
                            <connections>
                                <segue destination="2F6-UL-CJR" kind="unwind" unwindAction="applyNoneChanges:" id="Q5P-9o-hzF"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
